--- a/src/view/criarConta.html
+++ b/src/view/criarConta.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet">
+
     <title>Document</title>
 </head>
 <body>
@@ -15,65 +17,68 @@
     </header>
     <div class="first-line">
         <div>
-            Nome de usuário
-            <br>
+            <label for="nome-usuario">Nome de Usuário</label>
             <input type="text" id="nome-usuario" name="nome-usuario">
         </div>
         <div>
-            Nome de usuário
-            <br>
-            <input type="text" id="nome-usuario" name="nome-usuario">
+            <label for="nome-canal">Nome do Canal</label>
+            <input type="text" id="nome-canal" name="nome-canal">
         </div>
     </div>
     <div class='second-line'>
         <div>
-            Data de Nascimento
-            <br>
-            <input type="text" id="data-nascimento" name="data-nascimento">
+            <label for="data-nascimento">Data de Nascimento</label>
+            <input type="date" id="data-nascimento" name="data-nascimento">
         </div>
         <div>
-            Descrição
-            <br>
+            <label for="descricao-episodio">Descrição</label>
             <textarea id="descricao-episodio" ></textarea>
         </div>
     </div>
     <div class='third-line'>
         <div>
-            E-mail
-            <br>
-            <input type="text" id="e-mail" name="e-mail">
+            <label for="email">E-mail</label>
+            <input type="email" id="email" name="email">
         </div>
         <div>
-            Gênero
-            <br>
-            <input type="text" id="genero" name="genero">
+            <label for="genero">Gênero</label>
+            <input type="text" id="genero" name="genero" >
         </div>
     </div>
     <div class='fourth-line'>
-        <div>
-            Senha
-            <br>
+        <div>           
+            <label for="senha">Senha</label>
             <input type="text" id="senha" name="senha">
         </div>
         <div>
-            Classificação
-            <br>
+            <label for="classificacao">Classificação</label>
             <input type="text" id="classificacao" name="classificacao">
         </div>
     </div>
     <div>
         <button>Criar conta</button>
     </div>
+        
+   
 </body>
 <style>
     body > div {
         display: flex;
-        padding-left: 10%;
-        margin-bottom: 50px;
+        width: 100%;
+        margin-bottom: 70px;
     }
 
     body > div > div {
-        font-family: 'Inter', sans-serif;
+        padding-right: 5%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        font-family: sans-serif;
+    }
+
+    body > div > div:nth-child(1) {
+        padding-right: 8%;
+        padding-left: 8%;
     }
 
     .nome  {
@@ -81,7 +86,7 @@
         font-family: 'Intel', sans-serif;
         font-weight: bolder;
         font-size: 1.33rem;
-        padding-left: 10%;
+        padding-left: 8%;
         padding-top: 30px;
         padding-bottom: 40px;
     }
@@ -91,34 +96,29 @@
         height: 50px;
         margin-top: 20px;
         font-size: 20px;
-        width: 200%;
         border: 1px solid;
         border-color: rgb(214, 211, 211);
+
+    }
+
+    input:hover {
+        border: 1px solid #3BB4B4;
+    }
+
+    textarea:hover {
+        border: 1px solid #3BB4B4;
+    }
+
+    button:hover {
+        border: 1px solid #3BB4B4;
     }
 
     textarea {
         height: 100px;
         margin-top: 20px;
         font-size: 20px;
-        width: 206%;
         border: 1px solid;
         border-color: rgb(214, 211, 211);
-    }
-
-    .first-line > :nth-child(2) {
-        margin-left: 33%;
-    }
-
-    .second-line > :nth-child(2) {
-        margin-left: 33%;
-    }
-
-    .third-line > :nth-child(2) {
-        margin-left: 33%;
-    }
-
-    .fourth-line > :nth-child(2) {
-        margin-left: 33%;
     }
 
     body > :nth-child(6) {
@@ -130,7 +130,7 @@
     }
 
     button {
-        font-family: 'Inter', sans-serif;
+        font-family: sans-serif;
         font-size: 20px;
         background-color: rgb(187, 184, 184);
         height: 70px;
@@ -138,6 +138,7 @@
         border-radius: 50px;
         border: 0px;
     }
+    
 
 </style>
 </html>
