criarConta-layout e searchBar

--- a/src/view/criarConta.html
+++ b/src/view/criarConta.html
@@ -10,65 +10,75 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <div class='nome'>
-            <h1> Criar conta </h1>
+    <form name="cadastro">
+        <header>
+            <div class='nome'>
+                <h1> Criar conta </h1>
+            </div>
+        </header>
+        <div class="first-line">
+            <div>
+                <label for="nome-usuario">Nome de Usuário</label>
+                <input type="text" id="nome-usuario" name="nome-usuario">
+            </div>
+            <div>
+                <label for="nome-canal">Nome do Canal</label>
+                <input type="text" id="nome-canal" name="nome-canal">
+            </div>
         </div>
-    </header>
-    <div class="first-line">
+        <div class='second-line'>
+            <div>
+                <label for="data-nascimento">Data de Nascimento</label>
+                <input type="date" id="data-nascimento" name="data-nascimento">
+            </div>
+            <div>
+                <label for="descricao-episodio">Descrição</label>
+                <textarea id="descricao-episodio" ></textarea>
+            </div>
+        </div>
+        <div class='third-line'>
+            <div>
+                <label for="email">E-mail</label>
+                <input type="email" id="email" name="email">
+            </div>
+            <div>
+                
+                <label for="genero">Gênero</label>
+                <input list='generos' type="text" id="genero" name="genero" >
+                <datalist id='generos'>
+                    <option value="Masculino">
+                    <option value="Feminino">
+                    <option value="Não-Binário">
+                    <option value="Trans">
+                    <option value="Outro">
+                </datalist>
+            </div>
+        </div>
+        <div class='fourth-line'>
+            <div>           
+                <label for="senha">Senha</label>
+                <input type="text" id="senha" name="senha">
+            </div>
+            <div>
+                <label for="classificacao">Classificação</label>
+                <input type="text" id="classificacao" name="classificacao">
+            </div>
+        </div>
         <div>
-            <label for="nome-usuario">Nome de Usuário</label>
-            <input type="text" id="nome-usuario" name="nome-usuario">
+            <button type="submit">Criar conta</button>
         </div>
-        <div>
-            <label for="nome-canal">Nome do Canal</label>
-            <input type="text" id="nome-canal" name="nome-canal">
-        </div>
-    </div>
-    <div class='second-line'>
-        <div>
-            <label for="data-nascimento">Data de Nascimento</label>
-            <input type="date" id="data-nascimento" name="data-nascimento">
-        </div>
-        <div>
-            <label for="descricao-episodio">Descrição</label>
-            <textarea id="descricao-episodio" ></textarea>
-        </div>
-    </div>
-    <div class='third-line'>
-        <div>
-            <label for="email">E-mail</label>
-            <input type="email" id="email" name="email">
-        </div>
-        <div>
-            <label for="genero">Gênero</label>
-            <input type="text" id="genero" name="genero" >
-        </div>
-    </div>
-    <div class='fourth-line'>
-        <div>           
-            <label for="senha">Senha</label>
-            <input type="text" id="senha" name="senha">
-        </div>
-        <div>
-            <label for="classificacao">Classificação</label>
-            <input type="text" id="classificacao" name="classificacao">
-        </div>
-    </div>
-    <div>
-        <button>Criar conta</button>
-    </div>
+    </form>
         
    
 </body>
+</html>
 <style>
-    body > div {
+    div {
         display: flex;
-        width: 100%;
-        margin-bottom: 70px;
+        margin-bottom: 35px;
     }
 
-    body > div > div {
+    div > div {
         padding-right: 5%;
         width: 100%;
         display: flex;
@@ -76,7 +86,7 @@
         font-family: sans-serif;
     }
 
-    body > div > div:nth-child(1) {
+    div > div:nth-child(1) {
         padding-right: 8%;
         padding-left: 8%;
     }
@@ -88,7 +98,7 @@
         font-size: 1.33rem;
         padding-left: 8%;
         padding-top: 30px;
-        padding-bottom: 40px;
+        padding-bottom: 5px;
     }
     
     input {
@@ -98,7 +108,11 @@
         font-size: 20px;
         border: 1px solid;
         border-color: rgb(214, 211, 211);
+        
+    }
 
+    input:invalid {
+        border: 2px solid rgb(206, 4, 4);
     }
 
     input:hover {
@@ -114,19 +128,20 @@
     }
 
     textarea {
-        height: 100px;
+        height: 140px;
         margin-top: 20px;
         font-size: 20px;
         border: 1px solid;
         border-color: rgb(214, 211, 211);
+        outline: none;
+        resize: none;
     }
 
-    body > :nth-child(6) {
+    form > :nth-child(6) {
         margin-top: 100px;
         display: flex;
         justify-content: center;
         align-items: center;
-        padding-right: 20px;
     }
 
     button {
@@ -137,8 +152,8 @@
         width: 300px;
         border-radius: 50px;
         border: 0px;
+        cursor: pointer;
     }
     
 
 </style>
-</html>
