--- a/src/view/criarConta.html
+++ b/src/view/criarConta.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>Criar Conta</title>
 </head>
 <body>
     <form name="cadastro">
@@ -83,7 +83,8 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        font-family: sans-serif;
+        font-family: 'Inter', sans-serif;
+        font-weight: bolder;
     }
 
     div > div:nth-child(1) {
@@ -93,7 +94,7 @@
 
     .nome  {
         color: #3BB4B4;
-        font-family: 'Intel', sans-serif;
+        font-family: 'Inter', sans-serif;
         font-weight: bolder;
         font-size: 1.33rem;
         padding-left: 8%;
@@ -109,6 +110,11 @@
         border: 1px solid;
         border-color: rgb(214, 211, 211);
         
+    }
+
+    input[type='date'] {
+        font-family: 'Inter', sans-serif;
+        font-weight: bolder;
     }
 
     input:invalid {
@@ -145,7 +151,8 @@
     }
 
     button {
-        font-family: sans-serif;
+        font-family: 'Inter', sans-serif;
+        font-weight: bolder;
         font-size: 20px;
         background-color: rgb(187, 184, 184);
         height: 70px;
