Inserção de imagens da view estatistica

--- a/src/view/statistic.html
+++ b/src/view/statistic.html
@@ -27,10 +27,10 @@
                     <div class="line"></div>
                     <div class="subcards-container">   
                         <div>
-                            <img src="/progweb-podcast/src/rss/img/graficoUm.png" alt="gráfico de média de reproduções.">
+                            <img src="/src/rss/img/graficoUm.png" alt="gráfico de média de reproduções.">
                         </div>
                         <div>
-                            <img src="/progweb-podcast/src/rss/img/graficoDois.png" alt="gráfico em pizza da média de idade dos ouvintes.">
+                            <img src="/src/rss/img/graficoDois.png" alt="gráfico em pizza da média de idade dos ouvintes.">
                         </div>
                     </div>
                     <div class="divisao">
@@ -82,7 +82,7 @@
                     </div>
 					<div>
                         <div>
-                        <img src="/progweb-podcast/src/rss/img/graficoTres.png" alt="gráfico de monetização do canal de acordo com as últimas semanas." class="displayed">
+                        <img src="/src/rss/img/graficoTres.png" alt="gráfico de monetização do canal de acordo com as últimas semanas." class="displayed">
                         <div>
                     </div>
                 </div>
