--- a/src/view/favorites.html
+++ b/src/view/favorites.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../js/components/sideMenu.js"></script>
 
     <link rel="stylesheet" href="../utils/css/bootstrap.css">
     <script src="../utils/js/bootstrap.bundle.js" async></script>
@@ -15,7 +16,8 @@
     <title>Favoritos</title>
 </head>
 <body>
-    <div class="container-fluid">
+    <side-menu></side-menu>
+    <div class="container-fluid mt-5">
         <div class="row">
             <div class="col-10 offset-1">
                 <div class="main-head">
