--- a/src/view/home.html
+++ b/src/view/home.html
@@ -13,6 +13,7 @@
     O que consiste em baixar o código fonte, incluir na pasta utils e fazer a referência onde quer usar :) -->
     <link rel="stylesheet" href="../utils/css/bootstrap.css">
     <script src="../utils/js/bootstrap.bundle.js" async></script>
+    <script src="../js/components/sideMenu.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +21,8 @@
     <title>Home</title>
 </head>
 <body>
-    <div class="container-fluid">
+    <side-menu></side-menu>
+    <div class="container-fluid mt-5">
         <div class="row">
             <section>
                 <div class="col-10 offset-1">
