--- a/src/view/newEpisode.html
+++ b/src/view/newEpisode.html
@@ -8,12 +8,14 @@
 
     <link rel="stylesheet" href="../utils/css/bootstrap.css">
     <script src="../utils/js/bootstrap.bundle.js" async></script>
+    <script src="../js/components/sideMenu.js"></script>
 
     <title>Novo Episódio</title>
 </head>
 
 <body>
-    <div class="container-fluid">
+    <side-menu></side-menu>
+    <div class="container-fluid mt-5">
         <div class="row">
             <div class="col-xxl-4 offset-xxl-4 col-12">
                 <form class="novo-episodio mt-5">
