--- a/src/view/channels.html
+++ b/src/view/channels.html
@@ -68,7 +68,7 @@
 			<section>
                 <div class="col-10 offset-1">
                     <div class="head">
-                        <div class="head-text">
+                        <div class="head-text text-change">
                             Para você
                         </div>
                         <div class="line"></div>
@@ -139,6 +139,11 @@
         font-size: 1.33rem;
         padding-right: 10px;
     }
+
+    .text-change {
+        min-width: 110px;
+    }
+
     .line {
         height: 1px;
         width: 100%;
