Componente searchBar e ajustes layout

--- a/src/view/channels.html
+++ b/src/view/channels.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="../utils/css/bootstrap.css">
     <script src="../utils/js/bootstrap.bundle.js" async></script>
     <script src="../js/components/sideMenu.js"></script>
+    <script src="../js/components/searchBar.js"></script>
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,6 +20,7 @@
     <side-menu></side-menu>
 	<div class="container-fluid mt-5">
         <div class="row">
+            <search-bar class="mt-5"></search-bar>
             <section>
                 <div class="col-10 offset-1">
                     <div class="main-head">
