--- a/src/view/statistic.html
+++ b/src/view/statistic.html
@@ -7,6 +7,7 @@
 
 	<link rel="stylesheet" href="../utils/css/bootstrap.css">
     <script src="../utils/js/bootstrap.bundle.js" async></script>
+    <script src="../js/components/sideMenu.js"></script>
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +16,8 @@
 	<title>Canais</title>
 </head>
 <body>
-	<div class="container-fluid">
+    <side-menu></side-menu>
+	<div class="container-fluid mt-5">
         <div class="row">
             <section>
                 <div class="col-10 offset-1">
