Responsividade e navegação entre as páginas

--- a/src/view/account.html
+++ b/src/view/account.html
@@ -7,6 +7,7 @@
 
 	<link rel="stylesheet" href="../utils/css/bootstrap.css">
     <script src="../utils/js/bootstrap.bundle.js" async></script>
+	<script src="../js/components/sideMenu.js"></script>
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,8 +16,9 @@
 	<title>Conta</title>
 </head>
 <body>	
-	<div class="container-fluid">
+	<div class="container-fluid mt-5">
         <div class="row">
+			<side-menu class="mt-5"></side-menu>
 			<section class="mb-3">
 				<div class="col-10 offset-1">
 					
