--- a/src/view/channels.html
+++ b/src/view/channels.html
@@ -7,6 +7,8 @@
 
 	<link rel="stylesheet" href="../utils/css/bootstrap.css">
     <script src="../utils/js/bootstrap.bundle.js" async></script>
+    <script src="../js/components/sideMenu.js"></script>
+    <script src="../js/components/searchBar.js"></script>
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,8 +17,10 @@
 	<title>Canais</title>
 </head>
 <body>
-	<div class="container-fluid">
+    <side-menu></side-menu>
+	<div class="container-fluid mt-5">
         <div class="row">
+            <search-bar class="mt-5"></search-bar>
             <section>
                 <div class="col-10 offset-1">
                     <div class="main-head">
