--- a/src/view/login.html
+++ b/src/view/login.html
@@ -5,42 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet">
-    <title>Login</title>
+    <title>loginTeste</title>
 </head>
 <body>
-    <form name=login>
-        <header>
-            Login
-        </header>
-        <div>
-            <label for="email">E-mail</label><br>
-            <input type="email" id="email" name="email">
-        </div>
-        <label for="senha">Senha</label>
-        <div class="senhaComScript">
-            <input type="password" id="senha" name="senha"><br>
-            <button type="button" id="botao"><img src="../rss/img/eye-solid.svg"></button><br>
-        </div>
-        <button class="senhaEsquecida"><u>Esqueci a senha</u></button>
-        <button class="completarLogin" type="submit">Entrar</button>
-    </form>
+    <section>
+        <form name='login' id="form" method="POST">
+            <header>
+                Login
+            </header>
+            <div class='emailUsuario'>
+                <label for="email">E-mail</label><br>
+                <input type="email" id="email" name="email">
+            </div>
+            <div class="senhaUsuario">
+                <label for="senha">Senha</label><br>
+                <input type="password" id="senha" name="senha"><br>
+                <button type="button" id="botao">
+                    <img id='img1' class='img1' src="../rss/img/eye-solid.svg"> 
+                    <img id='img2' class='img2' src="../rss/img/eye-slash-solid.svg" >
+                </button><br>
+            </div>
+            <a href='' class="novaSenha">Esqueci a senha</u></a>
+            <br />
+            <button id='entrar' class="completarLogin" type="submit">Entrar</button>
+        </form>
+    </section>
+    <footer>
+        <br>
+        Não tem uma conta?
+        <br>
+        <button id='novaConta' class='novaConta' onclick="criarConta()">Criar Conta </button>
+    </footer>
 </body>
 </html>
 <style>
-    body {
-        font-family: 'Inter', sans-serif;
-        font-weight: bolder;
-    }
-
-    form {
+    body, form {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-    }
-
-    div {
-        padding-bottom: 75px;
+        font-family: 'Inter', sans-serif;
+        font-weight: bolder;
     }
 
     header {
@@ -51,6 +56,7 @@
     }
 
     input {
+        text-indent: 10px;
         outline: none;
         height: 50px;
         width: 400px;
@@ -58,10 +64,14 @@
         font-size: 20px;
         border: 1px solid;
         border-color: rgb(214, 211, 211);
-        margin-bottom: -15px;
+        margin-bottom: 0px;
+        
     }
 
-    
+    input:focus-within {
+    border: 2px solid  #3BB4B4 !important;
+  }
+
     .completarLogin {
         font-family: 'Inter', sans-serif;
         font-weight: bolder;
@@ -72,6 +82,69 @@
         border-radius: 50px;
         border: 0px;
         cursor: pointer;
+        margin-top: 40px;
+    }
+
+    .senhaUsuario {
+        position: relative;
+        margin-top: 50px;
+        margin-bottom: -10px;
+    }
+
+    .senhaUsuario  button {
+        background-color: transparent;
+        border: 0;
+        opacity: .5;
+        position: absolute;
+        right: 10px;
+        top: 40%;
+        height: 33px;
+        margin-top: 7px;
+        padding: 0px;
+        cursor: pointer;
+    }
+
+    button img {
+        margin-top: -6px;
+        height: 40px;
+        width: 40px;
+    }
+
+    button .img1 {
+        display: initial;
+    }
+
+    button .img2 {
+        display: none;
+        width: 42px;
+    }
+
+    .novaSenha {
+        color: #000;
+        text-decoration: none;
+        margin-right: 303px;
+        font-size: smaller;
+    }
+
+    .novaSenha:hover {
+        text-decoration: underline;
+    }
+
+    .novaConta {
+        font-family: 'Inter', sans-serif;
+        font-weight: bolder;
+        font-size: larger;
+        background-color: #31b8b8;
+        border-radius: 50px;
+        margin-top: 5px;
+        border: 0px;
+        height: 50px;
+        width: 150px;
+    }
+
+    .novaConta:hover {
+        background-color: #3ba1a1;
+        cursor: pointer;
     }
 
     input:hover {
@@ -79,69 +152,52 @@
     }
 
     .completarLogin:hover {
+        background-color: rgb(145, 142, 142);
         border: 1px solid #3BB4B4;
-    }
-
-   #botao{
-        background-color: transparent;
-        border: 0;
-        margin-top: 25px;
-        margin-left: -55px;
-        opacity: .5;
-        outline: 0;
-        height: 28px;
-        width: 45px;
-        margin-bottom: -10px;
-    }
-
-    img {
-        margin-top: -9px;
-        margin-left: -5px;
-        height: 40px;
-        width: 40px;
-        cursor: pointer;
-    }
-
-    .senhaComScript {
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        margin-right: 7px;
-    }
-
-    .senhaEsquecida {
-        font-family: 'Inter', sans-serif;
-        font-weight: bolder;
-        margin-top: -55px;
-        margin-bottom: 100px;
-        margin-right: 305px;
-        background-color: transparent;
-        border: 0;
-        outline: 0;
-        cursor: pointer;
-    }
-
-    .senhaEsquecida:hover {
-        font-style: italic;
-    }
-
-    form > :nth-child(3) {
-        margin-right: 360px;
     }
 
 </style>
 <script type="text/javascript">
 
-    var botao = document.getElementById('botao')
+    var botaoMostrarSenha = document.getElementById('botao')
     
-    botao.addEventListener('click', function(){
-    
+    botaoMostrarSenha.addEventListener('click', function(){
+        
         let senha = document.getElementById('senha')
-    
+        let imagem1 = document.getElementById('img1')
+        let imagem2 = document.getElementById('img2')
+
         if (senha.type == 'password') {
-        senha.type = 'text'
+            senha.type = 'text'
+            imagem1.style.display = 'none'
+            imagem2.style.display = 'initial'
         } else {
+            imagem1.style.display = 'initial'
+            imagem2.style.display = 'none'
             senha.type = 'password'
         }
+
     })
-    </script>
+
+    function criarConta() {
+
+        window.location.href = "criarConta.html" 
+     
+    }
+
+    var botaoEntrar = document.getElementById('entrar')
+    const form = document.querySelector('#form')
+
+    //ISSO CANCELA O FORMULARIO PARA MUDAR DE PAGINA
+    //Só coloquei aqui pra conseguir navegar entre as páginas, quando
+    //a gente colocar as verificações e o banco de dados é só mudar aqui
+    form.addEventListener('submit', event => {
+        event.preventDefault()
+    })
+    
+    botaoEntrar.addEventListener('click', function(){
+        window.location.href = "home.html" 
+    })
+
+</script>
+
