--- a/src/view/login.html
+++ b/src/view/login.html
@@ -65,12 +65,11 @@
         border: 1px solid;
         border-color: rgb(214, 211, 211);
         margin-bottom: 0px;
-        
     }
 
     input:focus-within {
     border: 2px solid  #3BB4B4 !important;
-  }
+    }
 
     .completarLogin {
         font-family: 'Inter', sans-serif;
@@ -105,9 +104,10 @@
     }
 
     button img {
-        margin-top: -6px;
-        height: 40px;
-        width: 40px;
+        margin-top: -2px;
+        margin-right: 0px;
+        height: 30px;
+        width: 30px;
     }
 
     button .img1 {
@@ -116,7 +116,8 @@
 
     button .img2 {
         display: none;
-        width: 42px;
+        width: 32.5px;
+        margin-right: -1.5px;
     }
 
     .novaSenha {
