--- a/src/view/newEpisode.html
+++ b/src/view/newEpisode.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="../utils/css/bootstrap.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet">
     <script src="../utils/js/bootstrap.bundle.js" async></script>
     <script src="../js/components/sideMenu.js"></script>
 
@@ -19,13 +20,17 @@
         <div class="row">
             <div class="col-xxl-4 offset-xxl-4 col-12">
                 <form class="novo-episodio mt-5">
-                    <a href="#">
-                        <div class="default-pic"></div>
-                        Adicionar foto
-                    </a>
-                    <label for="titulo-episodio" class="mt-4">Titulo do episódio</label>
-                    <input type="text" id="titulo-episodio" name="titulo-episodio" value="">
-                    <label for="descricao-episodio" class="mt-3">Descrição</label>
+                    <div class='foto'>
+                        <a href=#>
+                            <div id='foto'class="default-pic"></div>
+                        </a>
+                        <a href=# class="addFoto">
+                            <label for="foto" class="addPick">Adicionar foto</label>
+                        </a>
+                    </div>
+                    <label for="titulo-episodio" class="mt-5">Titulo do episódio</label>
+                    <input type="text" id="titulo-episodio" name="titulo-episodio">
+                    <label for="descricao-episodio" class="mt-4">Descrição</label>
                     <textarea id="descricao-episodio" rows="5" cols="33"></textarea>
                     <label for="audio-file" class="audio-input mt-5">
                         <div class="mt-5">
@@ -44,18 +49,59 @@
 </html>
 
 <style>
+    body, input, textarea, button {
+        font-family: 'Inter', sans-serif;
+        font-weight: bolder;
+    }
+    form {
+        margin: 0% 7% 2% 7%;
+    }
+    input {
+        height: 40px;
+    }
+    input, textarea {
+        text-indent: 10px;
+        font-size: 17px;
+        border: 1px solid;
+        border-color: rgb(133, 132, 132);
+        outline: none;
+        margin-top: 10px;
+        margin-right: 25%;
+    }
+    textarea:focus-within, input:focus-within {
+        border: 2px solid  #3BB4B4 !important;
+    }
+    input:hover, textarea:hover {
+        border: 1px solid #3BB4B4;
+    }
+    .foto {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 200px;
+    }
+    .addPick {
+        text-decoration: underline;
+        color: black;
+    }
+    .addPick:hover {
+        cursor: pointer;
+    }
     .default-pic {
         width: 200px;
         height: 200px;
         background-color: #616161;
-        border-radius: 25px;
+        border-radius: 35px;
     }
     .novo-episodio {
         display: flex;
         flex-direction: column;
     }
-    .novo-episodio a {
-        color: black;
+    .novo-episodio a:nth-child(1) {
+        border-radius: 35px;
+        right: 0;
+        margin-bottom: 20px;
     }
     .audio-input {
         background: url('../rss/img/cloud_upload.svg');
@@ -69,15 +115,24 @@
         justify-content: center;
     }
     .audio-input:hover {
+        background-color: rgb(185, 182, 182);
+        border: 1px solid #3BB4B4;
         cursor: pointer;
     }
-    .btn-cinza {
-        background-color: #C4C4C4;
-        width: 180px;
-        border: 0;
-        border-radius: 50px;
-        height: 30px;
-        line-height: 30px;
-        margin: auto;
+
+    button:hover {
+        background-color: rgb(185, 182, 182);
+        border: 1px solid #3BB4B4;
     }
+    .btn-cinza {
+        font-size: 20px;
+        background-color:#C4C4C4;
+        height: 60px;
+        width: 250px;
+        border-radius: 50px;
+        border: 0px;
+        margin: auto;
+        line-height: 30px;
+    }
+    
 </style>
