Criação da view de um canal

--- a/src/view/statistic.html
+++ b/src/view/statistic.html
@@ -124,7 +124,7 @@
     .line {
         height: 1px;
         width: 100%;
-        border: 1px solid #3BB4B4
+        border: 1px solid #3BB4B4;
     }
     
     .subcards-container {
