getting json array from element's items attribute

--- a/src/view/channels.html
+++ b/src/view/channels.html
@@ -20,7 +20,7 @@
     <side-menu></side-menu>
 	<div class="container-fluid mt-5">
         <div class="row">
-            <search-bar class="mt-5"></search-bar>
+            <search-bar items='["one", "two", "three"]' class="mt-5"></search-bar>
             <section>
                 <div class="col-10 offset-1">
                     <div class="main-head">
