criação da view change-profile

--- a/src/view/change-pwd.html
+++ b/src/view/change-pwd.html
@@ -29,7 +29,7 @@
             </div>
             <br>
             <a href='esq-senha.html' class="novaSenha">Esqueci a senha</u></a>
-            <button id='alterar' class="completarLogin" type="submit">Alterar</button>
+            <button id='alterar' class="completarAlteracao" type="submit">Alterar</button>
         </form>
     </section>
 </body>
@@ -67,7 +67,7 @@
     border: 2px solid  #3BB4B4 !important;
     }
 
-    .completarLogin {
+    .completarAlteracao {
         font-family: 'Inter', sans-serif;
         font-weight: bolder;
         font-size: 20px;
