--- a/src/view/forget-pwd.html
+++ b/src/view/forget-pwd.html
@@ -18,7 +18,7 @@
                 <input type="email" id="email" name="email">
             </div>
             <br />
-            <button id='recuperar' class="completarLogin" type="submit">Recuperar</button>
+            <button id='recuperar' class="completarAlteracao" type="submit">Recuperar</button>
         </form>
     </section>
 </body>
@@ -56,7 +56,7 @@
     border: 2px solid  #3BB4B4 !important;
     }
 
-    .completarLogin {
+    .completarAlteracao {
         font-family: 'Inter', sans-serif;
         font-weight: bolder;
         font-size: 20px;
