--- a/src/view/change-profile.html
+++ b/src/view/change-profile.html
@@ -130,7 +130,7 @@
     })
     
     botaoAlterar.addEventListener('click', function(){
-        window.location.href = "home.html" 
+        window.location.href = "account.html" 
     })
 
 </script>
