--- a/src/view/forget-pwd.html
+++ b/src/view/forget-pwd.html
@@ -83,7 +83,7 @@
     })
     
     botaoRecuperar.addEventListener('click', function(){
-        window.location.href = "home.html" 
+        window.location.href = "account.html" 
     })
 
 </script>
