--- a/src/view/change-pwd.html
+++ b/src/view/change-pwd.html
@@ -94,7 +94,7 @@
     })
     
     botaoAlterar.addEventListener('click', function(){
-        window.location.href = "home.html" 
+        window.location.href = "account.html" 
     })
 
 </script>
