--- a/src/view/change-channel.html
+++ b/src/view/change-channel.html
@@ -7,33 +7,28 @@
     <script src="../js/components/sideMenu.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet">
-    <title>Alterar Perfil</title>
+    <title>Alterar Canal</title>
 </head>
 <body>
     <side-menu></side-menu>
     <section>
         <form name='alterar' id="form" method="POST">
             <header>
-                Alterar Perfil
+                Alterar Canal
             </header>
-            <div class='nomeUsuario'>
-                <label for="nomeUsuario">Nome de Usuário</label>
-                <input type="text" id="nomeUser" name="nomeUser">
+            <div class='genero'>
+                <label for="genero">Gênero</label>
+                <input type="text" id="gen" name="gen">
             </div>
             <br>
-            <div class='novoEmail'>
-                <label for="novoEmail">Novo email</label>
-                <input type="email" id="newEmail" name="newEmail">
+            <div class='classificacao'>
+                <label for="calssificacao">Classificação</label>
+                <input type="text" id="clas" name="clas">
             </div>
             <br>
-            <div class='confirmarEmail'>
-                <label for="confirmarEmail">Confirmar email</label>
-                <input type="email" id="confirmEmail" name="confirmEmail">
-            </div>
-            <br>
-            <div class='dataNascimento'>
-                <label for="dataNascimento">Data de nascimento</label>
-                <input type="date" id="dataNasc" name="dataNasc">
+            <div class='criador'>
+                <label for="criador">Criador</label>
+                <input type="text" id="creator" name="creator">
             </div>
             <br>
             <div class="botoes">
@@ -71,23 +66,19 @@
         margin-bottom: 0px;
     }
 
-    #nomeUser{
-        margin-left: 52px;
+    #gen{
+        margin-left: 97px;
         width: 562px;
     }
 
-    #newEmail{
-        margin-left: 90px;
+    #clas{
+        margin-left: 60px;
         width: 562px;
     }
 
-    #confirmEmail{
-        margin-left: 58px;
+    #creator{
+        margin-left: 95px;
         width: 562px;
-    }
-
-    #dataNasc{
-        margin-left: 203px;
     }
 
     input:focus-within {
@@ -134,6 +125,7 @@
     botaoAlterar.addEventListener('click', function(){
         window.location.href = "account.html" 
     })
+
 
     //Cancelar
     var botaoCancelar = document.getElementById('cancelar')
