search-view criada

--- a/src/view/main-channel.html
+++ b/src/view/main-channel.html
@@ -164,8 +164,10 @@
     .icon-conteudo{
         width: 159px;
         height: 159px;
-        border-radius: 100px;
-
+        background-color: #616161;
+        border-radius: 35px;
+        flex: 0 0 auto;
+        margin: auto 10px;
     }
     
     .channel-info, .episodio {
