--- a/src/view/player.html
+++ b/src/view/player.html
@@ -55,7 +55,7 @@
                             <div class="line"></div>
                         </div>
                         <div class="episodio">
-                            <div class="icon-conteudo"></div>
+                            <div class="square"></div>
                             <div class="conteudo">
                                 <div class="title">Lorem ipsum massa</div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat excepturi voluptas numquam doloribus eveniet magnam molestiae. Animi optio in cupiditate eum blanditiis dolor tenetur libero quae illum dolores. Fugit, pariatur!</p>
@@ -69,7 +69,7 @@
                         </div>
 
                         <div class="episodio">
-                            <div class="icon-conteudo"></div>
+                            <div class="square"></div>
                             <div class="conteudo">
                                 <div class="title">Lorem ipsum massa</div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat excepturi voluptas numquam doloribus eveniet magnam molestiae. Animi optio in cupiditate eum blanditiis dolor tenetur libero quae illum dolores. Fugit, pariatur!</p>
@@ -83,7 +83,7 @@
                         </div>
 
                         <div class="episodio">
-                            <div class="icon-conteudo"></div>
+                            <div class="square"></div>
                             <div class="conteudo">
                                 <div class="title">Lorem ipsum massa</div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat excepturi voluptas numquam doloribus eveniet magnam molestiae. Animi optio in cupiditate eum blanditiis dolor tenetur libero quae illum dolores. Fugit, pariatur!</p>
@@ -147,6 +147,15 @@
         flex: 0 0 auto;
     }
 
+    .square{
+        width: 146px;
+        height:146px;
+        background-color: #616161;
+        border-radius: 35px;
+        flex: 0 0 auto;
+        margin: auto 10px;
+    }
+
     .icon {
         width: 700px;
         height: 375px;
@@ -161,12 +170,6 @@
         background-color: #000;
         border-radius: 0px 0px 35px 35px;
         margin: auto;
-    }
-
-    .icon-conteudo{
-        width: 159px;
-        height: 159px;
-        border-radius: 100px;
     }
     
     .channel-info, .episodio {
